A5 completed