@@ -1,33 +1,35 @@
 package Controller;
 
 import Model.PrgState;
-import Model.Stmt.IStmt;
-import Model.Stmt.NopStmt;
 import Model.Values.RefValue;
 import Model.Values.Value;
 import Repository.IRepo;
 import Utils.MyException;
-import Utils.State.MyExeStack;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+class Pair {
+    final PrgState first;
+    final MyException second;
+
+    public Pair(PrgState first, MyException second) {
+        this.first = first;
+        this.second = second;
+    }
+}
 
 public class Controller {
     private IRepo repository;
     private boolean flag = true;
+    ExecutorService executor;
     public Controller(IRepo repository) {
         this.repository = repository;
-    }
-    private PrgState oneStep(PrgState state) throws MyException {
-        MyExeStack stk = state.getExeStack();
-        if(stk.isEmpty())
-            throw new MyException("PrgState stack is empty.");
-        IStmt curr = stk.pop();
-        if (curr instanceof NopStmt)
-            return state;
-        return curr.execute(state);
     }
 
     public void setFlag(boolean flag) {
@@ -38,18 +40,88 @@ public class Controller {
         return flag;
     }
 
-    public void allStep() throws MyException {
-        PrgState state = repository.getPrgState();
-        repository.logPrgStateExec(state);
-        while (!state.getExeStack().isEmpty()) {
-            oneStep(state);
-            if (flag) {
-                repository.logPrgStateExec(state);
-                state.getMyHeapTable().setContent(safeGarbageCollector(
-                        getAddrFromSymTable(state.getSymTable().getMap().values()),
-                        state.getMyHeapTable().getContent()));
+    private void display(PrgState programState) {
+        System.out.println(programState.toString());
+    }
+
+    public void oneStepForAllPrograms(List<PrgState> programStates) throws MyException, InterruptedException {
+        programStates.forEach(programState -> {
+            try {
+                repository.logPrgStateExec(programState);
+//                display(programState);
+            } catch (MyException e) {
+                System.out.println("\u001B[31m" + e.getMessage() + "\u001B[0m");
             }
+        });
+        List<Callable<PrgState>> callList = programStates.stream()
+                .map((PrgState p) -> (Callable<PrgState>) (p::oneStep))
+                .collect(Collectors.toList());
+
+        List<Pair> newProgramList;
+        newProgramList = executor.invokeAll(callList).stream()
+                .map(future -> {
+                    try {
+                        return new Pair(future.get(), null);
+                    } catch (ExecutionException | InterruptedException e) {
+                        if (e.getCause() instanceof MyException)
+                            return new Pair(null, (MyException) e.getCause());
+                        System.out.println("\u001B[31m" + e.getMessage() + "\u001B[0m");
+                        return null;
+                    }
+                }).filter(Objects::nonNull)
+                .filter(pair -> pair.first != null || pair.second != null)
+                .collect(Collectors.toList());
+
+        for (Pair error: newProgramList)
+            if (error.second != null)
+                throw error.second;
+        programStates.addAll(newProgramList.stream().map(pair -> pair.first).toList());
+
+        programStates.forEach(programState -> {
+            try {
+                repository.logPrgStateExec(programState);
+//                display(programState);
+            } catch (MyException e) {
+                System.out.println("\u001B[31m" + e.getMessage() + "\u001B[0m");
+            }
+        });
+        repository.setPrgList(programStates);
+    }
+
+    public void oneStep() throws MyException, InterruptedException {
+        executor = Executors.newFixedThreadPool(2);
+        List<PrgState> programStates = removeCompletedPrg(repository.getPrgList());
+        oneStepForAllPrograms(programStates);
+        conservativeGarbageCollector(programStates);
+        //programStates = removeCompletedPrg(repository.getProgramList());
+        executor.shutdownNow();
+        //repository.setProgramStates(programStates);
+    }
+
+    public void allStep() throws MyException, InterruptedException {
+        executor = Executors.newFixedThreadPool(2);
+        List<PrgState> programStates = removeCompletedPrg(repository.getPrgList());
+        while (programStates.size() > 0) {
+            oneStepForAllPrograms(programStates);
+            conservativeGarbageCollector(programStates);
+            programStates = removeCompletedPrg(repository.getPrgList());
         }
+        executor.shutdownNow();
+        repository.setPrgList(programStates);
+    }
+
+    public void conservativeGarbageCollector(List<PrgState> programStates) {
+        List<Integer> symTableAddresses = Objects.requireNonNull(programStates.stream()
+                        .map(p -> getAddrFromSymTable(p.getSymTable().getMap().values()))
+                        .map(Collection::stream)
+                        .reduce(Stream::concat).orElse(null))
+                .collect(Collectors.toList());
+        programStates.forEach(p -> p.getMyHeapTable().setContent((HashMap<Integer, Value>) safeGarbageCollector(symTableAddresses, getAddressesFromHeap(p.getMyHeapTable().getContent().values()), p.getMyHeapTable().getContent())));
+    }
+
+
+    public List<PrgState> removeCompletedPrg(List<PrgState> inPrgList) {
+        return inPrgList.stream().filter(p -> p.isNotCompleted()).collect(Collectors.toList());
     }
 
     List<Integer> getAddrFromSymTable(Collection<Value> symTableValues){
@@ -59,17 +131,16 @@ public class Controller {
                 .collect(Collectors.toList());
     }
 
-    Map<Integer, Value> safeGarbageCollector(List<Integer> symTableAddr, Map<Integer,Value> heap){
-        List<Integer> heapAddr=heap.values().stream()
-                .filter(value -> value instanceof RefValue)
-                .map(value->{RefValue va=(RefValue) value;
-                    return va.getAddr();})
-                .toList();
+    public List<Integer> getAddressesFromHeap(Collection<Value> heapValues) {
+        return heapValues.stream()
+                .filter(v -> v instanceof RefValue)
+                .map(v -> {RefValue v1 = (RefValue) v; return v1.getAddr();})
+                .collect(Collectors.toList());
+    }
 
-        //Put all from heapAddr in SymTableAddr:
-        heapAddr.forEach(v -> {if(!symTableAddr.contains(v)) symTableAddr.add(v);});
-
-        return heap.entrySet().stream().filter(e-> symTableAddr.contains(e.getKey())).
-                collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+    public Map<Integer, Value> safeGarbageCollector(List<Integer> symTableAddresses, List<Integer> heapAddresses, Map<Integer, Value> heap) {
+        return heap.entrySet().stream()
+                .filter(e -> ( symTableAddresses.contains(e.getKey()) || heapAddresses.contains(e.getKey())))
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
     }
 }
